src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Geographic_Reach__c</fullName>
        <label>Geographic Reach</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>NorthEast</fullName>
                </value>
                <value>
                    <fullName>Other International</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>SouthEast</fullName>
                </value>
                <value>
                    <fullName>SouthWest</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HI_Blog_Password__c</fullName>
        <label>HI Blog Password</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HI_Blog_User_Name__c</fullName>
        <externalId>true</externalId>
        <label>HI Blog User Name</label>
        <length>34</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <label>Headquarters</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_may_we_help_you__c</fullName>
        <label>How may we help you?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Become a Member</fullName>
                </value>
                <value>
                    <fullName>Purchase Information/Reports</fullName>
                </value>
                <value>
                    <fullName>Consulting/Market Study</fullName>
                </value>
                <value>
                    <fullName>Training Request</fullName>
                </value>
                <value>
                    <fullName>Media Request</fullName>
                </value>
                <value>
                    <fullName>Customer Support/Training Request</fullName>
                </value>
                <value>
                    <fullName>Billing Questions</fullName>
                </value>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Join eList</fullName>
                </value>
                <value>
                    <fullName>Download White Paper</fullName>
                </value>
                <value>
                    <fullName>Speakers Bureau Information</fullName>
                </value>
                <value>
                    <fullName>Contact a Local Market Expert</fullName>
                </value>
                <value>
                    <fullName>Technical Support</fullName>
                </value>
                <value>
                    <fullName>Have a Sales Representative Contact Me</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IIS_Rep__c</fullName>
        <label>IIS Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Janeisha Fields</fullName>
                </value>
                <value>
                    <fullName>Guillermo Ruiz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Id__c</fullName>
        <label>Import Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>96</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Category__c</fullName>
        <label>Industry Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apartment Owner/Manager</fullName>
                </value>
                <value>
                    <fullName>Builders and Developers</fullName>
                </value>
                <value>
                    <fullName>Building Product Manufacturers</fullName>
                </value>
                <value>
                    <fullName>Hanley Wood</fullName>
                </value>
                <value>
                    <fullName>Industry Associate</fullName>
                </value>
                <value>
                    <fullName>Lenders and Investors</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Investment Banking</fullName>
                </value>
                <value>
                    <fullName>Mortgage Lending</fullName>
                </value>
                <value>
                    <fullName>Private Equity</fullName>
                </value>
                <value>
                    <fullName>Title Company</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL</fullName>
                </value>
                <value>
                    <fullName>LUMBER</fullName>
                </value>
                <value>
                    <fullName>OTHER BUILDING PRODUCT MANUFACTURERS</fullName>
                </value>
                <value>
                    <fullName>OTHER INDUSTRY</fullName>
                </value>
                <value>
                    <fullName>PAINT</fullName>
                </value>
                <value>
                    <fullName>RESEARCH CONSULTANT</fullName>
                </value>
                <value>
                    <fullName>RETAIL TENANT</fullName>
                </value>
                <value>
                    <fullName>SIDING</fullName>
                </value>
                <value>
                    <fullName>SOLAR</fullName>
                </value>
                <value>
                    <fullName>WINDOW MANUFACTURER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Code__c</fullName>
        <label>Industry Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry_Description__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCT</fullName>
                </value>
                <value>
                    <fullName>ADVR</fullName>
                </value>
                <value>
                    <fullName>APPL</fullName>
                </value>
                <value>
                    <fullName>APPR</fullName>
                </value>
                <value>
                    <fullName>APTM</fullName>
                </value>
                <value>
                    <fullName>APTO</fullName>
                </value>
                <value>
                    <fullName>ARCH</fullName>
                </value>
                <value>
                    <fullName>ASSOC</fullName>
                </value>
                <value>
                    <fullName>ATTY</fullName>
                </value>
                <value>
                    <fullName>BLDR</fullName>
                </value>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>BROK</fullName>
                </value>
                <value>
                    <fullName>CABI</fullName>
                </value>
                <value>
                    <fullName>CONS</fullName>
                </value>
                <value>
                    <fullName>DEVC</fullName>
                </value>
                <value>
                    <fullName>DEVL</fullName>
                </value>
                <value>
                    <fullName>DIST</fullName>
                </value>
                <value>
                    <fullName>DOOR</fullName>
                </value>
                <value>
                    <fullName>ELEC</fullName>
                </value>
                <value>
                    <fullName>ENGR</fullName>
                </value>
                <value>
                    <fullName>FAUC</fullName>
                </value>
                <value>
                    <fullName>FLOOR</fullName>
                </value>
                <value>
                    <fullName>GOVT</fullName>
                </value>
                <value>
                    <fullName>HVAC</fullName>
                </value>
                <value>
                    <fullName>HW</fullName>
                </value>
                <value>
                    <fullName>INSUL</fullName>
                </value>
                <value>
                    <fullName>INSUR</fullName>
                </value>
                <value>
                    <fullName>INTD</fullName>
                </value>
                <value>
                    <fullName>INVB</fullName>
                </value>
                <value>
                    <fullName>LEND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry_Description__c</fullName>
        <label>Industry Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ACCOUNTING FIRMS</fullName>
                </value>
                <value>
                    <fullName>ADVERTISING</fullName>
                </value>
                <value>
                    <fullName>APARTMENT MANAGER</fullName>
                </value>
                <value>
                    <fullName>APARTMENT OWNERS</fullName>
                </value>
                <value>
                    <fullName>APPLIANCE COMPANY</fullName>
                </value>
                <value>
                    <fullName>APPRAISER</fullName>
                </value>
                <value>
                    <fullName>ARCHITECT</fullName>
                </value>
                <value>
                    <fullName>ATTORNEY</fullName>
                </value>
                <value>
                    <fullName>BUILDERS</fullName>
                </value>
                <value>
                    <fullName>BUILDING INDUSTRY ASSOCIATION AND COUNCIL</fullName>
                </value>
                <value>
                    <fullName>BUILDING PRODUCT MANUFACTURERS</fullName>
                </value>
                <value>
                    <fullName>CABINETS</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>DEVELOPER-RESIDENTIAL LAND</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>DOORS MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>ELECTRICAL</fullName>
                </value>
                <value>
                    <fullName>ENGINEER</fullName>
                </value>
                <value>
                    <fullName>FAUCET MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>FLOORING MANUFACTURER</fullName>
                </value>
                <value>
                    <fullName>GOVERNMENT/CITY/COUNTY</fullName>
                </value>
                <value>
                    <fullName>HANLEY WOOD</fullName>
                </value>
                <value>
                    <fullName>HEATING, VENTILATION, AIR CONDITIONING</fullName>
                </value>
                <value>
                    <fullName>INSULATION</fullName>
                </value>
                <value>
                    <fullName>INSURANCE</fullName>
                </value>
                <value>
                    <fullName>INTERIOR DESIGNER</fullName>
                </value>
                <value>
                    <fullName>INVESTMENT BANKER (EQUITY)</fullName>
                </value>
                <value>
                    <fullName>LAND BROKER</fullName>
                </value>
                <value>
                    <fullName>LAND PLANNER</fullName>
                </value>
                <value>
                    <fullName>LANDSCAPER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insights_NL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subscribed to the Insights Newsletter</description>
        <label>Insights NL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in__c</fullName>
        <label>Interested In:</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MFE</fullName>
                </value>
                <value>
                    <fullName>AHF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JumpStart_Result__c</fullName>
        <label>JumpStart Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Builder - Opened</fullName>
                </value>
                <value>
                    <fullName>Builder - Clicked</fullName>
                </value>
                <value>
                    <fullName>Lender - Opened</fullName>
                </value>
                <value>
                    <fullName>Lender - Clicked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Indicator_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, then the customer would not like to receive the Key Indicator Alert.</inlineHelpText>
        <label>Key Indicator Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>TODAY()-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Aging_by_Owner__c</fullName>
        <formula>TODAY() - Owner_Change_Date_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Aging by Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name__c</fullName>
        <label>Lead Owner Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_True_Age__c</fullName>
        <formula>IF(ISNULL(Lead_Aging_by_Owner__c), Lead_Age__c , Lead_Aging_by_Owner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead True Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
                <value>
                    <fullName>Former Client</fullName>
                </value>
                <value>
                    <fullName>HBA Contact</fullName>
                </value>
                <value>
                    <fullName>One Time Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Headquarters</fullName>
                </value>
                <value>
                    <fullName>Divisions</fullName>
                </value>
                <value>
                    <fullName>Single Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MS_Segments__c</fullName>
        <label>MS Segments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BPM</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Finance/AD&amp;C</fullName>
                </value>
                <value>
                    <fullName>Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Finance/Mortgage</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Finance/Institutional</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Line__c</fullName>
        <label>Main Line</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Market_Area__c</fullName>
        <label>Market Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migrated_to_MG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated to MG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Home_Data_Alert_Territory__c</fullName>
        <label>New Home Data Alert Territory</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bakersfield, CA</fullName>
                </value>
                <value>
                    <fullName>Baltimore, MD</fullName>
                </value>
                <value>
                    <fullName>Central New Jersey</fullName>
                </value>
                <value>
                    <fullName>Central Valley California</fullName>
                </value>
                <value>
                    <fullName>Chicago Metro</fullName>
                </value>
                <value>
                    <fullName>Colorado Springs, CO</fullName>
                </value>
                <value>
                    <fullName>Denver, CO</fullName>
                </value>
                <value>
                    <fullName>Fort Collins-Loveland, CO</fullName>
                </value>
                <value>
                    <fullName>Fresno, CA</fullName>
                </value>
                <value>
                    <fullName>Las Vegas, NV</fullName>
                </value>
                <value>
                    <fullName>Los Angeles, CA</fullName>
                </value>
                <value>
                    <fullName>Northern New Jersey</fullName>
                </value>
                <value>
                    <fullName>Orange County, CA</fullName>
                </value>
                <value>
                    <fullName>Philadelphia, PA</fullName>
                </value>
                <value>
                    <fullName>Phoenix, AZ</fullName>
                </value>
                <value>
                    <fullName>Reno, NV</fullName>
                </value>
                <value>
                    <fullName>Riverside-San Bernardino, CA</fullName>
                </value>
                <value>
                    <fullName>Sacramento, CA</fullName>
                </value>
                <value>
                    <fullName>San Diego, CA</fullName>
                </value>
                <value>
                    <fullName>San Francisco Bay Area, CA</fullName>
                </value>
                <value>
                    <fullName>Southern New Jersey</fullName>
                </value>
                <value>
                    <fullName>Tucson, AZ</fullName>
                </value>
                <value>
                    <fullName>Washington, DC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newsletter_Subscriptions_Leads__c</fullName>
        <label>Newsletter Subscriptions - Leads</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insights</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - Non-BPM housing</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - Non-BPM non-housing</fullName>
                </value>
                <value>
                    <fullName>Metrostudy - BPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_US_State__c</fullName>
        <description>Used for State/Province outside of the US</description>
        <label>Non - US State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Homes_Built_Annually__c</fullName>
        <label>Number of Homes Built Annually</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-10</fullName>
                </value>
                <value>
                    <fullName>11-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofHomesBuiltAnnually__c</fullName>
        <label>Number of Homes Built Annually</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numberof_Homes_Built_Annually__c</fullName>
        <label>Number of Homes Built Annually</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Change_Date_2__c</fullName>
        <label>Owner Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Playbooks_Next_Step_Due_Date__c</fullName>
        <description>Shows the date when the next set of Playbooks tasks are due.</description>
        <label>Playbooks Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Name__c</fullName>
        <label>Playbooks Play Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Play_Status__c</fullName>
        <label>Playbooks Play Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbooks_Step_Number__c</fullName>
        <label>Playbooks Step Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Ranges__c</fullName>
        <label>Price Ranges</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Lead_Owner__c</fullName>
        <label>Prior Lead Owner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Spend__c</fullName>
        <label>Prior Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_News_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the checkbox is checked, then the customer would not like to receive the Product News and Promotions newsletter.</inlineHelpText>
        <label>Product News &amp; Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Computer Software</fullName>
                </value>
                <value>
                    <fullName>Door &amp; Window</fullName>
                </value>
                <value>
                    <fullName>Electrical and Mechanical</fullName>
                </value>
                <value>
                    <fullName>Exterior</fullName>
                </value>
                <value>
                    <fullName>Finishes and Surfaces</fullName>
                </value>
                <value>
                    <fullName>Kitchen and Bath</fullName>
                </value>
                <value>
                    <fullName>Site and Landscaping</fullName>
                </value>
                <value>
                    <fullName>Structural</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Names__c</fullName>
        <label>Project Names</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSD_Cell__c</fullName>
        <formula>$User.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Email__c</fullName>
        <formula>$User.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Fax__c</fullName>
        <formula>$User.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD_Phone__c</fullName>
        <formula>$User.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSD Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <label>Territory Owner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bob Bray- So CA/AZ/NM</fullName>
                </value>
                <value>
                    <fullName>Catherine LaFemina - So CA, Austin, Houston</fullName>
                </value>
                <value>
                    <fullName>Unknown - So CA/NV/UT/CO</fullName>
                </value>
                <value>
                    <fullName>Budd Brumbaugh-NorCA/NV(Reno)/ID/WY/OR/WA</fullName>
                </value>
                <value>
                    <fullName>John Shanks- San Antonio/Dallas/BPM</fullName>
                </value>
                <value>
                    <fullName>Wendy Pace - IL-IN-WI-IA-KY-MI-MN-OH</fullName>
                </value>
                <value>
                    <fullName>Bud Rogers - South East</fullName>
                </value>
                <value>
                    <fullName>Wayne Norris - North East</fullName>
                </value>
                <value>
                    <fullName>Toby Morrison - BPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recent_Campaigns__c</fullName>
        <label>Recent Campaigns - Leads</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Update</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>